--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p .",
     "start": "ts-node-dev webServer.ts"
   },
   "repository": {
@@ -18,17 +18,18 @@
   },
   "homepage": "https://github.com/leungchiyau/personalWebsite#readme",
   "dependencies": {
-    "@types/knex": "^0.16.1",
-    "@types/node": "^18.15.2",
     "dotenv": "^16.0.3",
     "knex": "^2.4.2",
     "pg": "^8.10.0",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescritp": "^1.0.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@types/knex": "^0.16.1",
+    "@types/node": "^18.15.2",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescritp": "^1.0.0"
   }
 }
