--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p .",
-    "start": "ts-node-dev webServer.ts"
+    "start": "ts-node-dev webServers/main.ts"
   },
   "repository": {
     "type": "git",
